--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                   APPLE
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="/Westcliff/index3.html">iPhone 12</a>
+                  <a class="dropdown-item" href="https://elwkdls221.github.io/iphone12/">iPhone 12</a>
                   <a class="dropdown-item" href="/Westcliff/index4.html">iPhone 11</a>
                 </div>
               </li>
