--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="ttbox">
       <p>Welcome to the <span class="or">Caseology World!!</span> Enjoy your <span class="or2">Shopping!!</span> </p>
     </div>
-    <a href="https://elwkdls221.github.io/main/">
+    <a href="">
     <img src="https://drive.google.com/uc?id=1-iA_xZ9hHEkIoZZzufSCVun-05-tFtVB" class="logo" width="auto" height="70" />
     </a>
     <div class="nvar">
