--- a/index.html
+++ b/index.html
@@ -82,11 +82,7 @@
     <div class="ttbox">
       <p>Welcome to the <span class="or">Caseology World!!</span> Enjoy your <span class="or2">Shopping!!</span> </p>
     </div>
-<<<<<<< HEAD
-    <a href="">
-=======
-    <a href="/Westcliff/index2.html">
->>>>>>> parent of dae863c (main)
+    <a href="#">
     <img src="https://drive.google.com/uc?id=1-iA_xZ9hHEkIoZZzufSCVun-05-tFtVB" class="logo" width="auto" height="70" />
     </a>
     <div class="nvar">
@@ -104,7 +100,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                   <a class="dropdown-item" href="https://elwkdls221.github.io/iphone12/">iPhone 12</a>
-                  <a class="dropdown-item" href="/Westcliff/index4.html">iPhone 11</a>
+                  <a class="dropdown-item" href="https://elwkdls221.github.io/iphone11/">iPhone 11</a>
                 </div>
               </li>
             </div>
@@ -114,8 +110,8 @@
                   SAMSUNG
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="/Westcliff/index5.html">Galaxy S20</a>
-                  <a class="dropdown-item" href="/Westcliff/index6.html">Galaxy a51</a>
+                  <a class="dropdown-item" href="https://elwkdls221.github.io/galaxys20/">Galaxy S20</a>
+                  <a class="dropdown-item" href="https://elwkdls221.github.io/galaxya51/">Galaxy a51</a>
                 </div>
               </li>
             </div>
@@ -229,7 +225,7 @@
             <h5 class="card-title">Parallax Armor</h5>
             <p class="card-text">Parallax Armor is characterized by excellent absorption and flexible materials. It also adds luxury to the carbon fibre design.</p>
             <p class="card-text"><small class="text-muted">For iPhone 12</small></p>
-            <a href="/Westcliff/index3.html" class="btn btn-danger text-white">Shop Now</a>
+            <a href="https://elwkdls221.github.io/iphone12/" class="btn btn-danger text-white">Shop Now</a>
           </div>
         </div>
         <div class="card">
@@ -238,7 +234,7 @@
             <h5 class="card-title">Crystal Clear</h5>
             <p class="card-text">Crystal Clear has enhanced its protection, maintaining its unique shape and design with its transparent design.</p>
             <p class="card-text"><small class="text-muted">For iPhone 11</small></p>
-            <a href="/Westcliff/index4.html" class="btn btn-danger text-white">Shop Now</a>
+            <a href="https://elwkdls221.github.io/iphone11/" class="btn btn-danger text-white">Shop Now</a>
           </div>
         </div>
         <div class="card">
@@ -247,7 +243,7 @@
             <h5 class="card-title">Ultra Hybrid</h5>
             <p class="card-text">Ultra Hybrid has enhanced protection on the outside of the case through CPU material, and is transparent and simple.</p>
             <p class="card-text"><small class="text-muted">For Galaxy a51</small></p>
-            <a href="/Westcliff/index6.html" class="btn btn-danger text-white">Shop Now</a>
+            <a href="https://elwkdls221.github.io/galaxya51/" class="btn btn-danger text-white">Shop Now</a>
           </div>
         </div>
         <div class="card">
@@ -256,7 +252,7 @@
             <h5 class="card-title">Rugged Armor</h5>
             <p class="card-text">Rugged armor has strong protection and absorption. It can also be used efficiently as a standing stick.</p>
             <p class="card-text"><small class="text-muted">For Galaxy S20</small></p>
-            <a href="/Westcliff/index5.html" class="btn btn-danger text-white">Shop Now</a>
+            <a href="https://elwkdls221.github.io/galaxys20/" class="btn btn-danger text-white">Shop Now</a>
           </div>
         </div>
       </div>
